--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,11 @@ img{
     height: auto;    
 }
 
-h1,h2,h3,p,ul
+h1,
+h2,
+h3,
+p,
+ul
 {
     margin: 0px;    
 }
@@ -45,6 +49,14 @@ h1,h2,h3,p,ul
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+}
+
+/* Container */
+.container{
+    margin-left: auto;
+    margin-right: auto;
+
+    outline: 1px solid red;
 }
 
 /* list */
