--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,11 @@ ul
 
 /* Container */
 .container{
+    width: 1230px;
+
+    padding-left: 15px;
+    padding-right: 15px;
+
     margin-left: auto;
     margin-right: auto;
 
