--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ ul
 
 /* hero section */
 .hero-section{
-    background-color: #2F303A;;
+    background-color: #2F303A;
 }
 .hero-title{
     color: #FFFFFF;
@@ -189,9 +189,21 @@ ul
 
     text-transform: uppercase;
 }
+.hero-title{
+    width: 696px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 .hero-button{
+    padding: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
     background-color: var(--company-color);
     color: var(--pramiry-button-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
     font-family: inherit;
     font-weight: 700;
@@ -201,8 +213,13 @@ ul
     letter-spacing: 0.06em;
 
     border: 0;
+    border-radius: 4px;
 
     cursor: pointer;
+}
+.hero-button .button-text{
+    display: block;
+    padding: 10px 32px;
 }
 
 /* features section */
