--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,12 @@ ul
     background-color: #2F303A;
 }
 .hero-title{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 696px;
+
     color: #FFFFFF;
 
     font-weight: 900;
@@ -188,12 +194,6 @@ ul
     letter-spacing: 0.06em;
 
     text-transform: uppercase;
-}
-.hero-title{
-    width: 696px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
 }
 .hero-button{
     padding: 0px;
@@ -238,14 +238,23 @@ ul
 .features-list{
     flex-wrap: wrap;
 }
-.features-list .item{
+.list-features .item{
     width: 270px;
 }
-.features-list .item:not(:nth-child(4n)){
+.list-features .item:not(:nth-child(4n+4)){
     margin-right: 30px;
 }
 /* development-section */
-
+.developmen-title{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.list-developmen{
+    flex-wrap: wrap;
+}
+.list-developmen .item:not(:nth-child(4n+4)){
+    margin-right: 30px;
+}
 /* employee section */
 .employee-title
 {
