--- a/css/styles.css
+++ b/css/styles.css
@@ -54,19 +54,10 @@ ul
 
 /* Container */
 .container{
-    width: 1230px;
-
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 1200px;
 
     margin-left: auto;
     margin-right: auto;
-}
-/* section */
-.section
-{
-    padding-top: 94px;
-    padding-bottom: 94px;
 }
 /* list */
 .list {
@@ -92,6 +83,7 @@ ul
 
 /* button */
 .button {
+    padding: 6px 22px;
 
     color: var(--secondory-button-color);
     background-color: var(--secondory-button-background-color);
@@ -129,6 +121,9 @@ ul
 }
 
 /* header */
+.header-section{
+    border-bottom: 1px solid #ECECEC;
+}
 .flex-header{
     display: flex;
     align-items: center;
@@ -187,13 +182,12 @@ ul
 
 /* hero section */
 .hero-section{
-    background-color: #2F303A;
-}
-.hero-section .section{
-    height: 600px;
     padding-bottom: 200px;
     padding-top: 200px;
+
+    background-color: #2F303A;
 }
+
 .hero-title{
     margin-bottom: 30px;
 
@@ -242,7 +236,8 @@ ul
 }
 
 /* features section */
-.features-section .section{
+.features-section{
+    padding-top: 94px;
     padding-bottom: 0px;
 }
 .features-title{
@@ -264,14 +259,25 @@ ul
 .list-features .item{
     width: 270px;
 }
+.features-text{
+    line-height: 1.71em;
+}
 
 /* development-section */
+.development-section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .list-developmen{
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
 }
 /* employee section */
+.employee-section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .list-employee{
     flex-wrap: wrap;
     gap: 30px;
@@ -279,6 +285,8 @@ ul
 }
 .card-text{
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .employee-card-title{
     margin-bottom: 10px;
@@ -333,6 +341,10 @@ ul
 }
 
 /* product section */
+.product-section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .list-botton
 {
     display: flex;
@@ -368,6 +380,10 @@ ul
     letter-spacing: 0.06em;
 }
 .product-text{
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+}
+.product-span{
     color: var(--pramiry-color);
 
     font-size: 16px;
